# dst-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml  main.yml
bot/: command.py  main.py  napcat.py  schedule.py  schemas.py  settings.py
bot/api/: __init__.py  admin.py  dst.py  event.py
bot/models/: __init__.py
bot/plugins/: __init__.py  cluster.py  dst.py  helper.py  lobby.py
migrations/bot/: 0_20240626162703_init.py  0_20240727162935_init.py  1_20241105101022_update.py
